--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <img src="./image/weather-non.svg" alt="image">
                 </div>    
             </div>
-            <span><img src="./image/heart.svg" alt="image"></span>
+            <div class="heart">
+                <img src="./image/heart.svg" alt="image">
+            </div>
         </section>
     </div>
     
